Update 2.5.0.3-RELEASE